update to stylesheet and game

--- a/game.html
+++ b/game.html
@@ -3,13 +3,66 @@
 <head>
 <html lang="en">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="stylesheet.css" type="text/css">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="jquery-1_8_3.js"></script>
+<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 </head>
-
 <body>
 	<h1><center>Australia</center></h1>
+<table id='list'>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
+	<tr>
+		<td>
+		Nulla Nulla and Sheilds
+		</td>
+		<td>
+		y
+		</td>
+	</tr>
 
+</table>
+<section>
+
+</section>
 </body>
 </html>
