--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 	</tr>
 	<tr>
 		<td>
-		Nulla Nulla and Sheilds
+		Nulla Nulla 
 		</td>
 		<td>
 		y
@@ -61,8 +61,25 @@
 	</tr>
 
 </table>
-<section>
+<div id='imagegrid'>
+	<img class='grid' id="1" src="Test images/Sharpening.jpg" alt="First element of grid" />
+	<img id="2" class='grid' src="Test images/Aborigional man.jpg" alt="First element of grid" />
+	<img id="3" class='grid' src="Test images/Artifacts.jpg" alt="First element of grid" />
+	<img id="4" class='grid' src="Test images/Bones.jpg" alt="First element of grid" />
+	<img id="5" class='grid' src="Test images/message stick.jpg" alt="First element of grid" />
+	<img id="6" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
+	<img id="7" class='grid' src="Test images/Throwing Stick.jpg" alt="First element of grid" />
+	<img id="8" class='grid' src="Test images/Waterway.jpg" alt="First element of grid" />
+	<img id="9" class='grid' src="Test images/Sharpening.jpg" alt="First element of grid" />
+	<img id="10" class='grid' src="Test images/Aborigional man.jpg" alt="First element of grid" />
+	<img id="11" class='grid' src="Test images/Artifacts.jpg" alt="First element of grid" />
+	<img id="12" class='grid' src="Test images/Bones.jpg" alt="First element of grid" />
+	<img id="13" class='grid' src="Test images/message stick.jpg" alt="First element of grid" />
+	<img id="14" class='grid' src="Test images/Throwing Stick.jpg" alt="First element of grid" />
+	<img id="15" class='grid' src="Test images/Waterway.jpg" alt="First element of grid" />
+	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
 
-</section>
+	
+</div>
 </body>
 </html>
