--- a/endgame.html
+++ b/endgame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="jquery-1_8_3.js"></script>
