--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
 		Nulla Nulla and Sheilds
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 	<tr>
@@ -24,7 +24,7 @@
 		Nulla Nulla 
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 	<tr>
@@ -32,7 +32,7 @@
 		Nulla Nulla and Sheilds
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 	<tr>
@@ -40,7 +40,7 @@
 		Nulla Nulla and Sheilds
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 	<tr>
@@ -48,7 +48,7 @@
 		Nulla Nulla and Sheilds
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 	<tr>
@@ -56,11 +56,12 @@
 		Nulla Nulla and Sheilds
 		</td>
 		<td>
-		y
+		<img class='tick'src="images/tick.png" alt="green tick" />
 		</td>
 	</tr>
 
 </table>
+
 <div id='imagegrid'>
 	<img class='grid' id="1" src="Test images/Sharpening.jpg" alt="First element of grid" />
 	<img id="2" class='grid' src="Test images/Aborigional man.jpg" alt="First element of grid" />
