--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Treasure Trove</title>
 <script type="text/javascript" src="jquery-1_8_3.js">
@@ -16,7 +16,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 
 <body>
 <div id="div1">
-  <h1>Treasure Trove</h1>
+  <h1><centre>Treasure Trove</centre></h1>
 </div>
 <footer>
 
@@ -73,15 +73,12 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
                       <option value="10">10</option>
                     </select>
                     </p>
-                    <p>Number of Extras:
+                    <p>Game Size:
                     <select class="setting-NOExtra-selected">
                       <option value="type" selected="selected">--Extras--</option>
-                      <option value="5">5</option>
-                      <option value="10">10</option>
-                      <option value="15">15</option>
-                      <option value="20">20</option>
-                      <option value="25">25</option>
-                      <option value="30">30</option>
+                      <option value="3">3x3</option>
+                      <option value="4">4x4</option>
+                      <option value="5">5x5</option>
                     </select>
                     </p>
                     <p>Time Limit:
