--- a/index.html
+++ b/index.html
@@ -114,7 +114,16 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
  <div class="popfoot" id="popfoot">
 	<div class="ftop_nav" id='fttop_nav'>
 	
-			<span>How to Play?</span>
+			<span>How to Play?
+      <br>
+      <br>
+        <p>1. Select either a category or custom game</p>
+        <p>2.  Press PLAY!</p>
+        <p>3.  You will be given a list of treasures that corresponds to some of the<br> images on your treasure map.</p>
+        <p>4.  Find each treasure by clicking on the correct image </p>
+        <p>5.  Do this and become the Capitan of Treasure Trove </p>
+        <h2>Happy Hunting</h2> 
+</span>
             <a class="close"></a>
 
 	</div>
