--- a/game.html
+++ b/game.html
@@ -79,8 +79,11 @@
 	<img id="14" class='grid' src="Test images/Throwing Stick.jpg" alt="First element of grid" />
 	<img id="15" class='grid' src="Test images/Waterway.jpg" alt="First element of grid" />
 	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
-
 	
 </div>
+
+<button type="submit" link="index.html" id="newgame" type="button">Return To Home</button>
+<button type="submit" link="leaderboard.html" id="leaderboard" type="button">Leader Board</buton>
+
 </body>
 </html>
