--- a/endgame.html
+++ b/endgame.html
@@ -11,8 +11,13 @@
 <body>
 	<h1><center>Congratulations!</center></h1>
 	<h2><center>All of the treasures have been found!</center></h2>
-		<img id="chest" src="images/treasurechest.jpg" alt="Treasure Chest" height="500px" width="600px">	
-		<button type="submit" link="index.html" id="newgame" type="button">New Game</button>
-		<button type="submit" link="leaderboard.html" id="leaderboard" type="button">Leader Board</buton>
+		<img id="chest" src="images/treasurechest.jpg" alt="Treasure Chest" height="450px" width="550px">	
+		
+		<form>
+			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
+		</form>
+		<form>
+			<input id= "leaderboard" type="button" value="Leader Board" onclick="window.location.href='leaderboard.html'"/>
+		</form>
 </body>
 </html>
