--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
                     <p>Time Limit:
                     <select class="setting-time-selected">
                       <option value="type" selected="selected">--Min--</option>
-                      <option value="3 min">3 min</option>
-                      <option value="5 min">5 min</option>
-                      <option value="7 min">7 min</option>
-                      <option value="10 min">10 min</option>
-                      <option value="15 min">15 min</option>
+                      <option value="3">3</option>
+                      <option value="5">5</option>
+                      <option value="7">7</option>
+                      <option value="10">10</option>
+                      <option value="15">15</option>
                     </select>
                     </p>
                 </div>
