--- a/apiTest.html
+++ b/apiTest.html
@@ -43,6 +43,8 @@
 
 <script type="text/JavaScript">
     var loadedImages = [];
+    var imagesToPrint = [];
+    var namesToPrint = [];
     var urlPatterns = ["flickr.com", "nla.gov.au", "artsearch.nga.gov.au", "recordsearch.naa.gov.au", "images.slsa.sa.gov.au"];
     var found = 0;
     var apiKey = "jsk1qqntnrj7qbvf";
@@ -50,7 +52,7 @@
     var atiHeritageTerms = ["Aboriginal", "Torres Strait Islander", "Aboriginal Heritage", "Aboriginal Artefacts", "Aboriginal History"];
     var natureTerms = ["Australian Flora", "Australian Fauna", "Environment", "Sustainability", "Natural Resources", "Natural Disasters"];
     var colAusTerms = ["Colonial Australia", "Colonialism", "British Settlement"];
-    var techTerms = ["Technology", "Inventions", "Innovation", "Research", "Development"];
+    var techTerms = ["Technology", "Invention", "Innovation", "Research", "Development"];
     var nineteenHundredsTerms = ["1900s Australia", "Immigration", "Industrialism", "Development"];
     var artTerms = ["Australian Flags", "Australian Art", "Aboriginal Art", "Australian Emblems", "Australian Symbols"];
     var mapTerm = "Map of Australia";
@@ -63,6 +65,43 @@
   		} else {
   			setTimeout(waitForFlickr, 250);
   		}
+    }
+
+    function pickRandomIndices(numberOnScreen) {
+      randomIndices = [];
+      for (i = 0; i < numberOnScreen; i++) {
+        randomIndices.push(i);
+      }
+      return shuffleArray(randomIndices);
+      /* having trouble because of asynchronous getJson
+      randomIndices = [];
+      while (randomIndices.length < 16) {
+        randomIndex = Math.floor((Math.random() * 100) + 1);
+        if ($.inArray(randomIndex, randomIndices) <= -1) {
+          randomIndices.push(randomIndex);
+        }
+      }
+      console.log(randomIndices);
+      return randomIndices;*/
+    }
+
+    function shuffleArray(array) {
+        for (var i = array.length - 1; i > 0; i--) {
+            var j = Math.floor(Math.random() * (i + 1));
+            var temp = array[i];
+            array[i] = array[j];
+            array[j] = temp;
+        }
+        return array;
+    }
+
+    function pickRandomImages(toDisplay) {
+      for (i = 0; i < toDisplay.length; i++) {
+        randomImageUrl = loadedImages[toDisplay[i]];
+        randomImageName = names[toDisplay[i]];
+        imagesToPrint.push(randomImageUrl);
+        namesToPrint.push(randomImageName);
+      }
     }
 
     function createURL(searchTerm) {
@@ -91,14 +130,15 @@
       loadedImages = [];
       found = 0;
       names = [];
+      namesToPrint = [];
+      imagesToPrint = [];
 
       var url = createURL(mapTerm);
-      console.log(url);
       //get the JSON information we need to display the images
       $.getJSON(url, function(data) {
           $('#output').empty();
-          console.log(data);
           $.each(data.response.zone[0].records.work, processImages);
+          pickRandomImages(pickRandomIndices(1));
           waitForFlickr(); // Waits for the flickr images to load
       });
     });
@@ -106,10 +146,14 @@
     $("form#searchTrove").submit(function(event) {
         event.preventDefault();
 
+        imagesToPrint = [];
+        namesToPrint = [];
         loadedImages = [];
-	      found = 0;
+        found = 0;
         searchTerms = [];
         names = [];
+
+        toDisplay = pickRandomIndices(16);
 
         $('#output').empty();
         //get input values
@@ -128,16 +172,25 @@
           searchTerms = artTerms;
         }
 
-        console.log(searchTerms);
+/*
+        for (i in searchTerms) {
+          var url = createURL(searchTerms[i]);
+          $.getJSON(url, function(data) {
+            //console.log(data);
+            totalData = $.extend(totalData, data);
+          });
+        }
+        console.log(totalData);*/
 
         for (i in searchTerms) {
           var url = createURL(searchTerms[i]);
-          console.log(url);
           //get the JSON information we need to display the images
           $.getJSON(url, function(data) {
-              console.log(data);
               $.each(data.response.zone[0].records.work, processImages);
-  	          waitForFlickr(); // Waits for the flickr images to load
+              if (i == (searchTerms.length - 1)) {
+                pickRandomImages(toDisplay);
+                waitForFlickr(); // Waits for the flickr images to load
+              }
           });
         }
     });
@@ -210,15 +263,16 @@
 
     function printImages() {
 	     // Print out all images
-        for (var i in loadedImages) {
+        for (var i in imagesToPrint) {
             var image = new Image();
-            fullImageName = names[i]
+            fullImageName = namesToPrint[i];
+            console.log(fullImageName);
             if (fullImageName.length > 100) {
               imageName = fullImageName.slice(0, 97) + "..."
             } else {
               imageName = fullImageName;
             }
-            image.src = loadedImages[i];
+            image.src = imagesToPrint[i];
             image.style.display = "inline-block";
             image.style.width = "48%";
             image.style.margin = "1%";
