--- a/Timer(sample).html
+++ b/Timer(sample).html
@@ -7,7 +7,6 @@ Remove this if you use the .htaccess -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <title>HTML5 Timer for work-relax balance</title> 
  
-<link rel="stylesheet" type="text/css" src="timer_style.css"> 
 <script> 
 countDownSeconds = 60; 
 var handle = null; 
@@ -99,7 +98,7 @@ This is a canvas
 
 
 <button onclick="startWorkCountDown()"> 
-Work Hard 
+start
 </button> 
 </div> 
 </body> 
