Leaderboard and home buttons functional

--- a/game.html
+++ b/game.html
@@ -81,9 +81,12 @@
 	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
 	
 </div>
-
-<button type="submit" link="index.html" id="newgame" type="button">Return To Home</button>
-<button type="submit" link="leaderboard.html" id="leaderboard" type="button">Leader Board</buton>
+		<form>
+			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
+		</form>
+		<form>
+			<input id= "leaderboard" type="button" value="Leader Board" onclick="window.location.href='leaderboard.html'"/>
+		</form>
 
 </body>
 </html>
