--- a/apiTest.html
+++ b/apiTest.html
@@ -51,9 +51,9 @@
 
     var atiHeritageTerms = ["Aboriginal", "Torres Strait Islander", "Aboriginal Heritage", "Aboriginal Artefacts", "Aboriginal History"];
     var natureTerms = ["Australian Flora", "Australian Fauna", "Environment", "Sustainability", "Natural Resources", "Natural Disasters"];
-    var colAusTerms = ["Colonial Australia", "Colonialism", "British Settlement"];
-    var techTerms = ["Technology", "Invention", "Innovation", "Research", "Development"];
-    var nineteenHundredsTerms = ["1900s Australia", "Immigration", "Industrialism", "Development"];
+    var colAusTerms = ["Colonialism", "Settlement", "Post-Colonialism"];
+    var techTerms = ["Technology", "Science", "Research", "Development", "Invention"];
+    var nineteenHundredsTerms = ["1900s", "Immigration", "Industrialism", "Development"];
     var artTerms = ["Australian Flags", "Australian Art", "Aboriginal Art", "Australian Emblems", "Australian Symbols"];
     var mapTerm = "Map of Australia";
 
@@ -70,7 +70,10 @@
     function pickRandomIndices(numberOnScreen) {
       randomIndices = [];
       for (i = 0; i < numberOnScreen; i++) {
-        randomIndices.push(i);
+        randomIndex = Math.floor((Math.random() * 30) + 1);
+        if ($.inArray(randomIndex, randomIndices) <= -1) {
+          randomIndices.push(randomIndex);
+        }
       }
       return shuffleArray(randomIndices);
       /* having trouble because of asynchronous getJson
