--- a/index.html
+++ b/index.html
@@ -21,22 +21,25 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 
 <div class="container">
   <div class="menu-grids">
-    
-      <h2>Pick a Category:
-      <select class="setting-category-selected">
-      <option value="type" selected="selected">--Category--</option>
-      <option value="atiHeritage">Aboriginal and Torres Strait Islander Heritage</option>
-      <option value="nature">Nature</option>
-      <option value="colAus">Colonial Australia</option>
-      <option value="tech">Technology</option>
-      <option value="nineteenHundreds">1900s Australia</option>
-      <option value="art">Art, Symbols and Emblems</option>
-      </select>
+
+      <h2>Pick a Category:</h2>
+      <form action="game.html" id="searchTrove" method="get">
+        <select name="category" id="category">
+          <option value="atiHeritage" selected="selected">Aboriginal and
+            Torres Strait Islander Heritage</option>
+          <option value="nature">Nature</option>
+          <option value="colAus">Colonial Australia</option>
+          <option value="tech">Technology</option>
+          <option value="nineteenHundreds">1900s Australia</option>
+          <option value="art">Art, Symbols and Emblems</option>
+        </select>
+        <button type="submit" id="searchbtn">Play!</button>
+      </form>
 
       <h2>Or</h2>
-   
+
       <a href="#" class="tc"><h2>Create a Custom Game</h2></a>
-    
+
   </div>
 </div>
 <div id="gray"></div>
@@ -113,7 +116,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
  <a href="#" class="ac">How to Play?</a>
  <div class="popfoot" id="popfoot">
 	<div class="ftop_nav" id='fttop_nav'>
-	
+
 			<span>How to Play?
       <br>
       <br>
@@ -122,7 +125,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
         <p>3.  You will be given a list of treasures that corresponds to some of the<br> images on your treasure map.</p>
         <p>4.  Find each treasure by clicking on the correct image </p>
         <p>5.  Do this and become the Capitan of Treasure Trove </p>
-        <h2>Happy Hunting</h2> 
+        <h2>Happy Hunting</h2>
 </span>
             <a class="close"></a>
 
