--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="jquery-1_8_3.js"></script>
+<script type="text/javascript" src="scripts/game.js"></script>
 <link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 </head>
 <body>
@@ -21,7 +22,7 @@
 	</tr>
 	<tr>
 		<td>
-		Nulla Nulla 
+		Nulla Nulla
 		</td>
 		<td>
 		<img class='tick'src="images/tick.png" alt="green tick" />
@@ -64,8 +65,8 @@
 
 <div id='imagegrid'>
 	<img class='grid' id="1" src="Test images/Sharpening.jpg" alt="First element of grid" />
-	<img id="2" class='grid' src="Test images/Aborigional man.jpg" alt="First element of grid" />
-	<img id="3" class='grid' src="Test images/Artifacts.jpg" alt="First element of grid" />
+	<img id="2" class='grid' src="Test images/Aborigional man.jpg" alt="Second element of grid" />
+	<img id="3" class='grid' src="Test images/Artifacts.jpg" alt="Third element of grid" />
 	<img id="4" class='grid' src="Test images/Bones.jpg" alt="First element of grid" />
 	<img id="5" class='grid' src="Test images/message stick.jpg" alt="First element of grid" />
 	<img id="6" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
@@ -79,7 +80,10 @@
 	<img id="14" class='grid' src="Test images/Throwing Stick.jpg" alt="First element of grid" />
 	<img id="15" class='grid' src="Test images/Waterway.jpg" alt="First element of grid" />
 	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
-	
+
+</div>
+
+<div id="output">
 </div>
 		<form>
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
