check if game is finished, some hovering, etc.

--- a/game.html
+++ b/game.html
@@ -16,48 +16,42 @@
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+		<td class='check'>
 		</td>
 	</tr>
 	<tr>
 		<td>
 		Nulla Nulla
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+		<td class='check'>
 		</td>
 	</tr>
 	<tr>
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+    <td class='check'>
 		</td>
 	</tr>
 	<tr>
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+    <td class='check'>
 		</td>
 	</tr>
 	<tr>
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+    <td class='check'>
 		</td>
 	</tr>
 	<tr>
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
-		<td>
-		<img class='tick'src="images/tick.png" alt="green tick" />
+    <td class='check'>
 		</td>
 	</tr>
 
