--- a/leaderboard.html
+++ b/leaderboard.html
@@ -36,7 +36,7 @@
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
 	</form>
 	<form>
-			<input id= "leaderboard" type="button" value="Back to End Game" onclick="history.go(-1);return true;"/>
+			<input id= "leaderboard" type="button" value="Back to Game" onclick="history.go(-1);return true;"/>
 	</form>
 
 </body>
