--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 </head>
 <body>
 	<h1><center>Australia</center></h1>
+  
 <table id='list'>
 	<tr>
 		<td>
@@ -118,6 +119,7 @@
   	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
   </a>
 
+      <input id= "moremap" type="button" value="More about the map" onclick="window.location.href='leaderboard.html'"/>
 </div>
 
 <div id="output">
