--- a/game.html
+++ b/game.html
@@ -118,8 +118,9 @@
   <a href="" rel="prettyPhoto" title="">
   	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
   </a>
-
-      <input id= "moremap" type="button" value="More about the map" onclick="window.location.href='leaderboard.html'"/>
+  <a href="" rel="prettyPhoto" title="">
+    <img id="moremap" src="images/moremap.png" alt="First element of grid" />
+  </a>
 </div>
 
 <div id="output">
