Added map popup

--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<h1><center>Australia</center></h1>
-  
+
 <table id='list'>
 	<tr>
 		<td>
@@ -119,7 +119,7 @@
   	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
   </a>
   <a href="" rel="prettyPhoto" title="">
-    <img id="moremap" src="images/moremap.png" alt="First element of grid" />
+    <img id="moremap" src="images/moremap.png" alt="" />
   </a>
 </div>
 
