Changes to index

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style/style.css">
 <link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Treasure Trove</title>
-<script type="text/javascript" src="jquery-1_8_3.js">
+<script type="text/javascript" src="scripts/jquery-1_8_3.js">
 </script>
 
 <script>
@@ -149,10 +149,10 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 
 
 
-<script type="text/javascript" src="window_display.js">
+<script type="text/javascript" src="scripts/windowDisplay.js">
 </script>
 
-<script type="text/javascript" src="window_move.js">
+<script type="text/javascript" src="scripts/windowMove.js">
 </script>
 
 
