--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="style/style.css">
-<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
+<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="style/game.css" type ="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js">
