File name changes

--- a/endgame.html
+++ b/endgame.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style/style.css">
 <link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
-<script type="text/javascript" src="jquery-1_8_3.js"></script>
+<script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
 </head>
 
 <body>
 	<h1><center>Congratulations!</center></h1>
 	<h2><center>All of the treasures have been found!</center></h2>
-		<img id="chest" src="images/treasurechest.jpg" alt="Treasure Chest" height="450px" width="550px">
+		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
 
 		<form>
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
