--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style/style.css">
 
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
-<script type="text/javascript" src="jquery-1_8_3.js"></script>
+<script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
 </head>
 
 <body>
