--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="style/style.css">
-<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="style/game.css" type ="text/css">
+<link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js">
@@ -46,7 +47,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 <div class="popup" id="popup">
 
 	<div class="top_nav" id='top_nav'>
-		<div align="center">
+		<div class="customGame">
 			<span>Custom Game</span>
             <a class="guanbi"></a>
 		</div>
@@ -119,7 +120,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 
 			<span>How to Play?
       <br>
-      <br>
+
         <p>1. Select either a category or custom game</p>
         <p>2.  Press PLAY!</p>
         <p>3.  You will be given a list of treasures that corresponds to some of the<br> images on your treasure map.</p>
