--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 </head>
 
 <body>
