--- a/endGame.html
+++ b/endGame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style/style.css">
-<link href="https://fonts.googleapis.com/css?family=New+Rocker|Pompiere" rel="stylesheet" type ="text/css">
+<link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
