--- a/game.html
+++ b/game.html
@@ -70,7 +70,13 @@
 
         </div>
         </div>
+<div id="instructions">
+ <p>Forget how to play?</p>
+  
 </div>
+        
+</div>
+
 <table id='list'>
 	<tr>
 		<td>
