index login style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ setTimeout(function(){document.getElementsByTagName('body')[0].style.height = wi
 <div class="login">
 <form>
 	<h2>Login</h2>
-	<input type="text" name="userID">
+	<input type="text" name="userID" id="loginText">
 	<button type="submit" id="loginbutton">Login</button>
 </form>
 </div>
